--- a/index.html
+++ b/index.html
@@ -63,10 +63,9 @@
 </div>
     <script src="./script.js"></script>
 
-    <!---<footer>
-        <p>Copyright 2023 COC</p>
+    <footer>
+      <p>Made with 💛 <a href="https://satyam-s-portfolio.vercel.app/" target="_blank">Satyam Singh</a></p>
     </footer>
-    -->
   </body>
 
 
