--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="./assets/game-controller-round-799-svgrepo-com.svg">
     <title>COC Stats</title>
-    <link rel="icon" href="https://github.com/Satyxm/splashcoc.github.io/blob/main/assets/clash-mini-svgrepo-com.svg" >
     <link rel="stylesheet" type="text/css" href="./styles.css" />
     <link
       rel="stylesheet"
@@ -24,7 +24,7 @@
     />
   </head>
   <body>
-    <header>
+    <header class="index-header">
       <a href="#" class="logo">CLASH <span>OF</span> CLANS</a>
       <ul class="navlist">
         <li><a href="home.html">Home</a></li>
